# PDF-TASK

./: .gitignore  ENHANCED_IMAGE_VIEWER_IMPLEMENTATION.md  FINAL_PDF_VIEWER_SOLUTION.md  IMAGE_VIEWER_VERIFICATION.md  MIGRATION_GUIDE.md  MULTI_FORMAT_DOCUMENT_VIEWER.md  PDF_404_FIX_SUMMARY.md  PDF_FIXES_SUMMARY.md  PDF_REFERENCE_ERROR_FIX.md  PDF_RENDER_TASK_FIX.md  PDF_TOOLBAR_FIX_SUMMARY.md  README.md  README_AATRAL.md  STRUCTURE.md  UNIFIED_DOCUMENT_VIEWER_FIX.md  check_db.py  loadPDF_example.ts  package.json  pyproject.toml  run.bat  run_aatral.bat  run_uv.bat  run_uv.sh  test_pdf_endpoint.py  test_pdf_fix.py
WorkDone/: 2025-12-03.md
apps/web/: App.tsx  index.css  main.tsx  package-lock.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
backend/: main.py  test_libreoffice.py
backend/migrations/: 001_add_annotation_types.sql
backend/tests/: README.md  conftest.py  test_annotation_api.py  test_document_upload.py  test_image_annotation_persistence.py  test_models.py  test_schemas.py
backend/uploads/: 1cacb5ac-1ae6-4bdf-abb7-051b65e33ce7.docx  1f345b79-24ca-447c-b53b-cbd025a645ff.docx  1f6f3a27-06ea-486c-994f-abd5570e4d8b.docx  3c74ec2d-f1a5-4497-a492-433aee50b469.docx  3f1d8ae0-dfc7-423e-80f7-3a739ee71fe7.docx  521ddcc9-8288-4e06-a828-7e81be6cf2ac.docx  6066768a-b122-4bee-83ec-2e92fef34ec0.docx  7e2f7c5b-099a-41dd-8269-249ef4fad5b0.docx  a082a339-20d5-467e-a2e0-1b00464816e9.docx
core/: __init__.py
core/interfaces/: __init__.py  docx-preview.d.ts
core/schemas/: __init__.py
core/utils/: __init__.py  index.ts  migrateDocuments.ts  pdfValidator.ts  zoomUtils.ts
docs/: 01_SYSTEM_OVERVIEW.md  02_TECHNICAL_IMPLEMENTATION.md  03_USER_MANUAL_AND_FEATURES.md  04_SETUP_GUIDE.md  05_API_AND_DATA_MODELS.md  CLEANUP_GUIDE.md  UV_QUICK_REFERENCE.md  UV_SETUP_GUIDE.md
frontend/: .env.development  .env.production  ANNOTATION_MANAGER_IMPLEMENTATION.md  AUTOMATIC_PAN_MODE.md  MANUAL_TEST_TASK_4.md  PANNING_GUIDE.md  PAN_ISSUE_DEBUG.md  VIEWER_DOCUMENTATION.md  VIEWER_IMPROVEMENTS.md  VIEWER_QUICK_START.md  ZOOM_BEHAVIOR_CHANGES.md  package-lock.json  package.json  run-tests.ps1  run-tests.sh  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  debug-filename.ts  index.css  main.tsx
modules/: __init__.py  main.py  registry.py  requirements.txt
shared/: __init__.py
tools/: __init__.py
tools/scripts/: setup_uv.sh  (+1 more)
(+135 files in other folders)
